Fix VSBPP-SAT and NoGoodCuts bug + Benchmark + cleanup